feat: Sanitise synthetic fields from FHIRPath evaluation results
Extract evaluation logic from PathlingContext into
SingleInstanceEvaluator in the fhirpath module. Strip synthetic
fields (_fid, value_scale, _value_canonicalized, etc.) from
complex type results before JSON serialisation. Wire up typed
variable support for %varName resolution in expressions.